Jms, if any beer is low on quantity, request comes from beer_service and new beer_invenoty entries are created, improved package organisation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8082
-logging.level.guru=debug
+logging.level.com.dela.msscbeerinventoryservice.web.services.InventoryListener=debug
 
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
